@@ -1,0 +1,144 @@
+/*
+ * This file is part of PolicyUpdater.
+ *
+ * Copyright (C) 2003, 2004, 2005 University of Western Sydney
+ * by Vino Fernando Crescini <jcrescin@cit.uws.edu.au>
+ *
+ * PolicyUpdater is free software; you can redistribute it and/or modify
+ * it under the terms of the GNU General Public License as published by
+ * the Free Software Foundation; either version 2 of the License, or
+ * (at your option) any later version.
+ *
+ * PolicyUpdater is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ * GNU General Public License for more details.
+ *
+ * You should have received a copy of the GNU General Public License
+ * along with PolicyUpdater; if not, write to the Free Software
+ * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
+ */
+
+#include <cstdlib>
+#include <cstddef>
+#include <cstring>
+
+#include <vlad/vlad.h>
+#include <vlad/mem.h>
+#include <vlad/rlist.h>
+
+vlad_rlist::vlad_rlist() : vlad_list(true)
+{
+  m_ground = true;
+}
+
+vlad_rlist::~vlad_rlist()
+{
+  purge(true);
+}
+
+/* adds a relation to the list */
+int vlad_rlist::add(const char *a_int1, const char *a_int2, unsigned int a_rel)
+{
+  int retval;
+  vlad_rel *rptr = NULL;
+  vlad_rel **rarray = NULL;
+  unsigned int size;
+
+  if (a_int1 == NULL || a_int2 == NULL)
+    return VLAD_NULLPTR;
+
+  if (a_rel > TBE_REL_FII)
+    return VLAD_INVALIDINPUT;
+
+  if ((rptr = VLAD_MEM_NEW(vlad_rel())) == NULL)
+    return VLAD_MALLOCFAILED;
+
+  retval = VLAD_OK;
+
+  if (retval == VLAD_OK) {
+    unsigned int rs;
+
+    TBE_REL_SET_CLEAR(rs);
+    TBE_REL_SET_ADD(rs, a_rel);
+
+    retval = rptr->init(a_int1, a_int2, rs);
+  }
+ 
+  if (retval == VLAD_OK) {
+    retval = vlad_list::get((vlad_list_item *) rptr,
+                            (vlad_list_item ***) &rarray,
+                            &size);
+  }
+
+  /* if not already in the list, we add it */
+  if (retval == VLAD_NOTFOUND) {
+    if (!rptr->is_ground())
+      m_ground = false;
+    return vlad_list::add(rptr);
+  }
+
+  /* if already in, we just add the relation to the relset */
+  if (retval == VLAD_OK)
+    retval = (rarray[0])->add(a_rel);
+
+  /* cleanup */
+  if (rarray != NULL)
+    VLAD_MEM_FREE(rarray);
+  if (rptr != NULL)
+    VLAD_MEM_DELETE(rptr);
+
+  return retval; 
+}
+
+/* gives a reference to the ith relation */
+int vlad_rlist::get(unsigned int a_i, vlad_rel **a_rel)
+{
+  return vlad_list::get(a_i, (vlad_list_item **) a_rel);
+}
+
+/* replace vars in vlist to ident in ilist. create a new rlist */
+int vlad_rlist::replace(vlad_varlist *a_vlist,
+                        vlad_stringlist *a_ilist,
+                        vlad_rlist **a_rlist)
+{
+  int retval;
+  unsigned int i;
+  vlad_rlist *rlist;
+
+  if (a_rlist == NULL)
+    return VLAD_NULLPTR;
+
+  if ((rlist = VLAD_MEM_NEW(vlad_rlist())) == NULL)
+    return VLAD_MALLOCFAILED;
+
+  retval = VLAD_OK;
+
+  for (i = 0; retval == VLAD_OK && i < vlad_list::length(); i++) {
+    vlad_rel *old_rel;
+    vlad_rel *new_rel;
+
+    if (retval == VLAD_OK)
+      retval = vlad_list::get(i, (vlad_list_item **) &old_rel);
+    if (retval == VLAD_OK)
+      retval = old_rel->replace(a_vlist, a_ilist, &new_rel);
+    if (retval == VLAD_OK)
+      retval = rlist->vlad_list::add((vlad_list_item *) new_rel);
+  }
+
+  /* cleanup */
+  if (retval != VLAD_OK) {
+    VLAD_MEM_DELETE(rlist);
+    return retval;
+  }
+
+  *a_rlist = rlist;
+
+  return VLAD_OK;
+}
+
+/* returns true if the list contains no variables */
+bool vlad_rlist::is_ground()
+{
+  return m_ground;
+}
