@@ -1,5 +1,13 @@
 2006-01-05  Vino Fernando Crescini  <jcrescin@cit.uws.edu.au>
 
+	* lib/Makefile.in :
+	* lib/rel.cpp :
+	* lib/rel.h :
+	* lib/rlist.cpp :
+	* lib/rlist.h :
+
+	  - Added classes to represent temporal interval relations.
+
 	* lib/identifier.cpp :
 	* lib/identifier.h :
 
